--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>T.M.I. (Task Management Interface) - Contact</title>
-    <link rel="stylesheet" type="text/css" href="/css/contact.css">
+    <link rel="stylesheet" type="text/css" href="css/contact.css">
 </head>
 <body>
     <nav class="navbar" id="navbar">
