--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>T.M.I. (Task Management Interface)</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -16,15 +16,14 @@
         <div class="main">
             <img id="banner" src="images/banner.jpg" alt="Banner Image">
             <h1 class="header">Task Manager</h1>
-            <p id="dateTime"></p>
-            <div class="inputField">
+            <fieldset class="inputField">
                 <input id="new-task" type="text" placeholder="Enter a new task" />
                 <input id="new-project" type="text" placeholder="Enter a new project" />
                 <textarea id="new-description" placeholder="Enter a task description"></textarea>
                 <input id="new-due-date" type="date" />
                 <input id="new-reminder" type="datetime-local" />
                 <button id="add-task">Add Task</button>
-            </div>
+            </fieldset>
         </div>
         <div class="sidebar">
             <h2>Uncompleted Tasks</h2>
