--- a/about-us.html
+++ b/about-us.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>About Us</title>
-    <link rel="stylesheet" type="text/css" href="/css/about-us.css">
+    <link rel="stylesheet" type="text/css" href="css/about-us.css">
 </head>
 <body>
     <nav class="navbar" id="navbar">
