adding local time and date elements

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="main">
             <img id="banner" src="images/banner.jpg" alt="Banner Image">
             <h1 class="header">Task Manager</h1>
+            <p id="local-time"></p>
             <fieldset class="inputField">
                 <input id="new-task" type="text" placeholder="Enter a new task" />
                 <input id="new-project" type="text" placeholder="Enter a new project" />
